syntax = "proto3";

package videos;
option go_package = "./videos";


message videosRequest {
    int32 categoryID = 1;
}

message videoResponse {
    int32 id = 1;
	int32 categoryID = 2;
	string name = 3;
	string description = 4;
	string price = 5;
	string url = 6;
    int32 subscriber = 7;
}


service VideosStrean {
    rpc GetByCategoryID(videosRequest) returns (stream videoResponse);
}